[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Rawan199812 <rawan.13579@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
